# template_ia_gen

./: .env-dist  .gitignore  README.md  docker-compose.yml  ollama_entrypoint.sh  pyproject.toml
app/: .gitignore  Dockerfile  config.py  main.py
app/src/: __init__.py
app/src/controller/: __init__.py  summarizer_controller.py
app/src/model/: __init__.py  ollama_adapter.py  openai_adapter.py  pdf_extractor.py  pdf_summarizer.py
app/src/model/adapters/: ollama_adapter.py  openai_adapter.py
app/src/model/domain/: pdf_summarizer.py
app/src/model/ports/: llm_port.py
app/src/view/: __init__.py  console_view.py  fastapi_app.py
prompts/: all_in_one.md  app_agent.md  architect_ai_engineer.md  use_case_agent.md
