[project]
name = "template-ia-gen"
version = "0.1.0"
description = "Template for PDF summarization using LLM technology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<=0.116.1",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "PyPDF2>=3.0.1",
    "uvicorn>=0.34.2",
    "itsdangerous>=2.2.0",  # For starlette
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["model*", "view*", "controller*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
